made tests slightly more lightweight